--- a/wetube-api/src/main/resources/application.properties
+++ b/wetube-api/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:~/test
+spring.datasource.username=sa
+spring.datasource.password=
 
+spring.OAuth2.google.url=https://accounts.google.com/o/oauth2/v2/auth
+spring.OAuth2.google.client-id=555871325858-vg3s040vuv5drcf4fl2q20tnda2p2tst.apps.googleusercontent.com
+spring.OAuth2.google.callback-url=http://localhost:8080/signin/social/google/form/callback
+spring.OAuth2.google.client-secret=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
+spring.OAuth2.google.scope=https://www.googleapis.com/auth/userinfo.email
