--- a/wetube-api/src/main/resources/application.properties
+++ b/wetube-api/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.OAuth2.google.client-id=555871325858-vg3s040vuv5drcf4fl2q20tnda2p2tst.app
 spring.OAuth2.google.callback-url=http://localhost:8080/signin/social/google/form/callback
 spring.OAuth2.google.client-secret=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
 spring.OAuth2.google.scope=https://www.googleapis.com/auth/userinfo.email
+
+jwt.token-issuer="wetube"
+jwt.token-secret-key="SECRET__KEY"
